Fix - Alignment, Retranscoding issues in list view (#1595)
* feat: Fix admin pages spacing for Chrome and Safari

* Fix the admin-spacing for dashboard and analytics page for free users on safari browser

* fix: Console error on analytics page

* fix: Header padding on different pages

* fix: Retranscode media from list view

* fix: Height of button in media library

* fix: Transcoding progress in list view

* fix: Address Copilot comments

---------

--- a/assets/src/css/media-library.scss
+++ b/assets/src/css/media-library.scss
@@ -189,6 +189,10 @@ $media-library-active-folder: #f5f5f5;
 		border-radius: 0.25rem;
 		padding: 6px 8px;
 		top: -2px;
+
+		@media (max-width: 900px) {
+			padding: 3px 8px;
+		}
 	}
 
 	.media-frame-content {
